# jsonparser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  license.txt  main.cpp
config/: example_json.json  example_json2.json
demo/: demo.cpp  demo.h  demostrings.h  demostrings.inc
demo/demofiles/: json.json  json_invalid_1.json  json_invalid_2.json  schema.json  schema_invalid.json
include/: json.h  jsonparser.h  utils.h
include/JSONParser/: exceptions.h  jsonparser.h
jsonparser.xcodeproj/: project.pbxproj
jsonparser.xcodeproj/project.xcworkspace/xcuserdata/jason.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
jsonparser.xcodeproj/xcshareddata/xcschemes/: jsonparser.xcscheme
jsonparser.xcodeproj/xcuserdata/jason.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: json.cpp  jsonparser.cpp  utils_macos.cpp
